--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
     <div class="container">
         <h1 class="heading">Cash Register Manager</h1>
         <p>Enter the bill amount and cash given by the customer and know minimum number of notes to return</p>
-        <label for= "input-bill">Bill Amount:</label>
-        <input type="text" id="input-bill">
-        <label for ="input-cash">Cash Amount:</label>
-        <input  type="text" id="input-cash">
+        <label for= "input-bill" >Bill Amount:</label>
+        <input type="number" id="input-bill" >
+        <label for ="input-cash" class="input-cash">Cash Amount:</label>
+        <input  type="number" id="input-cash" class="input-cash">
         <button id="btn-check">Check</button>
         <p class="error-msg"></p>
         <table class ="output-table">
-            <tr>
-                <th>Return Change</th>
-            </tr>
+            <caption class= "table-heading">
+                Return Change
+            </caption>
             <tr>
                 <th>No.of notes</th>
                 <td class="no-of-notes"></td>
